<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/save_in_gallery"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/save_in_pictures"/>
        
    <item
        android:id="@+id/share_on_fb"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/share_on_facebook"/>
    
    <item
       android:id="@+id/share_on_twitter"
       android:orderInCategory="100"
        app:showAsAction="never"
       android:title="@string/share_on_twitter"/>
     
    <item
       android:id="@+id/share_on_google_plus"
       android:orderInCategory="100"
        app:showAsAction="never"
       android:title="@string/share_on_google"/>
        
    <item
       android:id="@+id/send_to_friend"
       android:orderInCategory="100"
        app:showAsAction="never"
       android:title="@string/send_to_a_friend"/>
     
 	<item android:id="@+id/rate_App" 
       android:orderInCategory="100"
        app:showAsAction="never"
       android:title="@string/rate_this_app"/>

</menu>
