<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/papyrus">

    <ScrollView
        android:id="@+id/ScrlView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <LinearLayout
            android:id="@+id/layoutForScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/hintTextView"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/image_desc" />

            <ImageView
                android:id="@+id/cardPhoto"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/selected_photo"
                android:gravity="center_horizontal"

                android:scaleType="fitCenter"
                android:src="@drawable/pharoah" />

            <EditText
                android:id="@+id/userName"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/name_message"
                android:maxLength="80"
                android:maxLines="1"></EditText>

            <Button
                android:id="@+id/createCard"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/create_card" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>